--- a/LocalDisasterPreventionInformationApp/Resources/Raw/map.html
+++ b/LocalDisasterPreventionInformationApp/Resources/Raw/map.html
@@ -68,6 +68,8 @@
         function moveToShelter(lat, lng) {
             map.setView([lat, lng], 17);
         }
+
+        var prefectureMarkers = [];
     </script>
 </body>
 </html>
