TopPageロジック修正

--- a/LocalDisasterPreventionInformationApp/Resources/Raw/map.html
+++ b/LocalDisasterPreventionInformationApp/Resources/Raw/map.html
@@ -53,7 +53,7 @@
             }
 
             // 現在地マーカー（赤い〇）
-            L.circleMarker([lat, lng], {
+            currentLocationMarker = L.circleMarker([lat, lng], {
                 radius: 8,
                 color: 'red',
                 fillColor: 'red',
