--- a/LocalDisasterPreventionInformationApp/Resources/Raw/map.html
+++ b/LocalDisasterPreventionInformationApp/Resources/Raw/map.html
@@ -26,10 +26,14 @@
         // 地図の初期表示（日本の中心あたり）
         var map = L.map('map').setView([35.0, 135.0], 5);
 
+        window.mapReady = false;
+
         // OpenStreetMap タイル
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
             maxZoom: 19
         }).addTo(map);
+
+        window.mapReady = true;
 
         // C# から呼ばれる関数
         function drawRoute(coords) {
@@ -128,23 +132,48 @@
 
             if (routeControl) {
                 map.removeControl(routeControl);
+                routeControl = null;
             }
 
-            // mode が undefined の場合は driving を使う
-            var profile = mode || "driving";
+            // OSRM 正式プロファイル
+            var profile =
+                mode === "driving" ? "driving" :
+                    mode === "bicycling" ? "cycling" :
+                        mode === "walking" ? "walking" :
+                            "driving";
 
-            routeControl = L.Routing.control({
-                waypoints: [
-                    L.latLng(fromLat, fromLng),
-                    L.latLng(toLat, toLng)
-                ],
-                router: L.Routing.osrmv1({
-                    serviceUrl: `https://router.project-osrm.org/route/v1/${profile}/`
-                }),
-                routeWhileDragging: false,
-                show: false,
-                createMarker: function () { return null; }
-            }).addTo(map);
+            // OSRM API URL
+            var url = `https://router.project-osrm.org/route/v1/${profile}/${fromLng},${fromLat};${toLng},${toLat}?overview=full&geometries=geojson`;
+
+            fetch(url)
+                .then(r => r.json())
+                .then(json => {
+                    if (!json.routes || json.routes.length === 0) {
+                        console.error("No route found");
+                        return;
+                    }
+
+                    var coords = json.routes[0].geometry.coordinates.map(c => [c[1], c[0]]);
+
+                    // ルート線を描画
+                    routeControl = L.polyline(coords, {
+                        color: 'red',
+                        weight: 5,
+                        opacity: 1
+                    }).addTo(map);
+
+                    // ルート全体が見えるように調整
+                    map.fitBounds(routeControl.getBounds());
+                })
+                .catch(err => console.error(err));
+        }
+
+        // ルート削除
+        function clearRoute() {
+            if (routeControl) {
+                map.removeControl(routeControl);
+                routeControl = null;
+            }
         }
     </script>
 </body>
